too many keywords (+6 squashed commits) Squashed commits: [d622a36] documentation [db1b727] metadata [093ca27] add license and docs link [fa51d27] add license [5266b03] new keywords/description [ccfd899] remove unnecessary feature flag

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "display-link"
 version = "0.1.0"
 authors = ["tyler <tyler@brainiumstudios.com>"]
 edition = "2018"
+keywords = ["CVDisplayLink", "CADisplayLink", "ios", "macos", "apple"]
+description = "rusty bindings to apples CADisplayLink/CVDisplayLink interface"
+license = "MIT"
+repository = "http://github.com/BrainiumLLC/display-link"
+documentation = "https://docs.rs/display-link"
+
+[package.metadata.docs.rs]
+default-target = "x86_64-apple-darwin"
 
 [dependencies]
 failure = "0.1.3"
