allow selecting the monitor to "link" to. this allows for true vsync when multiple monitors are connected on macos

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "display-link"
-version = "0.1.6"
+version = "0.1.7"
 authors = ["tyler <tyler@brainiumstudios.com>"]
 edition = "2018"
 keywords = ["CVDisplayLink", "CADisplayLink", "ios", "macos", "apple"]
@@ -12,9 +12,13 @@ documentation = "https://docs.rs/display-link"
 [package.metadata.docs.rs]
 default-target = "x86_64-apple-darwin"
 
+[features]
+default = []
+
 [dependencies]
 failure = "0.1.5"
 foreign-types = "0.3.2"
+winit = { version = "0.20.0-alpha2", optional = true }
 
 [target.'cfg(any(target_os = "ios"))'.dependencies]
 objc = "0.2.6"
