--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ default = []
 [dependencies]
 foreign-types = "0.3.2"
 time-point = "0.1.1"
-winit = { version = "0.20.0-alpha3", optional = true }
+winit = { git = "https://github.com/rust-windowing/winit", rev = "ad7d4939a8be2e0d9436d43d0351e2f7599a4237", optional = true }
 
 [target.'cfg(any(target_os = "ios"))'.dependencies]
 objc = "0.2.6"
