--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ default-target = "x86_64-apple-darwin"
 
 [dependencies]
 foreign-types = "0.3.2"
+thiserror = "1.0.20"
 time-point = "0.1.1"
 
 [target.'cfg(any(target_os = "ios"))'.dependencies]
